k8s/config-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: riotgraphs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts: [riotgraphs.com]
      secretName: riotgraphs-tls
  rules:
    - host: riotgraphs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: riotgraphs-app, port: { number: 80 } } }
